<resources>
    <string name="app_name">Charitable</string>
    <string name="donateButton">Donate Now</string>
    <string name="item">Item</string>
    <string name="string_item" />
    <string name="donation_amount">Donation Amount</string>
    <string name="donate_now_button_label">Donate Now</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="charityLogoDescription">Charity Logo</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="donate">DONATE</string>
    <string name="pick_a_charity">Pick a Charity</string>
    <string name="select_amount">Select amount</string>
    <string name="exhaust">~</string>
    <string name="_10">10</string>
    <string name="_5">5</string>

    <string name="donation_card_filler_text">A donation was made. How charitable!</string>
    <string name="matchButtonText">MATCH</string>
    <string name="shareButtonText">SHARE</string>
    <string name="applaudButtonText">APPLAUD</string>



</resources>
