<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    tools:layout_editor_absoluteY="81dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/eventCard"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/cardDescription"
            android:layout_width="375dp"
            android:layout_height="40dp"
            android:layout_marginTop="12dp"
            android:text="@string/donation_card_filler_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/matchButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            android:paddingEnd="1dp"
            android:paddingBottom="1dp"
            android:text="@string/matchButtonText"
            android:textColor="#0D47A1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/eventCard"
            app:layout_constraintEnd_toStartOf="@+id/shareButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardDescription"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/shareButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            android:paddingEnd="1dp"
            android:paddingBottom="1dp"
            android:text="@string/shareButtonText"
            android:textColor="#0D47A1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/eventCard"
            app:layout_constraintEnd_toStartOf="@+id/applaudButton"
            app:layout_constraintStart_toEndOf="@+id/matchButton"
            app:layout_constraintTop_toBottomOf="@id/cardDescription"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/applaudButton"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:paddingStart="1dp"
            android:paddingTop="1dp"
            android:paddingEnd="1dp"
            android:paddingBottom="1dp"
            android:text="@string/applaudButtonText"
            android:textColor="#0D47A1"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/eventCard"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/shareButton"
            app:layout_constraintTop_toBottomOf="@id/cardDescription"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>