<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DonateDummy">

    <TextView
        android:id="@+id/donate_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/donate"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:fontFamily="sans-serif-black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/donate_charity"
        android:layout_marginTop="50dp"
        android:textColor="@color/green_lively"
        />

    <EditText
        android:id="@+id/donate_charity"
        android:layout_width="294dp"
        android:layout_height="45dp"
        android:layout_marginTop="56dp"
        android:ems="10"
        android:hint="@string/pick_a_charity"
        android:inputType="text"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_banner"
        app:layout_constraintBottom_toTopOf="@id/shake"/>

    <TextView
        android:id="@+id/shake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="(Or shake your phone for shuffled selection!)"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/donate_charity"
        app:layout_constraintBottom_toTopOf="@id/donate_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/donate_amount"
        android:layout_width="293dp"
        android:layout_height="43dp"
        android:layout_marginTop="30dp"
        android:ems="10"
        android:hint="@string/select_amount"
        android:inputType="numberDecimal"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shake"
        app:layout_constraintBottom_toTopOf="@id/donate_send"/>

    <Button
        android:id="@+id/donate_send"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/green_dark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_amount"
        app:layout_constraintBottom_toTopOf="@id/donate_back"
        android:text="@string/exhaust"
        android:textColor="@color/dark_gray"
        android:drawableRight="@drawable/ic_baseline_local_shipping_24"
        android:onClick="donate"
        android:background="@drawable/round"/>

    <Button
        android:id="@+id/donate_back"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="@color/green_dark"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/donate_send"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textColor="@color/dark_gray"
        android:drawableTop="@drawable/ic_baseline_home_24"
        android:onClick="back"
        android:background="@drawable/round"/>

    <!--Button
        android:id="@+id/testShake"
        android:layout_width="100dp"
        android:layout_height="49dp"
        android:onClick="handleShakeEvent"
        android:text="testShake"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@id/donate_back" /!-->





    <ProgressBar
        android:id="@+id/donate_progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        tools:ignore="MissingConstraints"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>